# language-exchange-app

./: manage.py  pyproject.toml
language_exchange_app/: asgi.py  settings.py  urls.py  wsgi.py
main/: views.py
main/templates/main/: index.html
