[tool.poetry]
name = "language-exchange-app"
version = "0.1.0"
description = "Website for exchanging lanuages with native speakers"
authors = ["Yura <yura.gavriley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
